[tool.poetry]
name = "rsa-encryption"
version = "0.1.0"
description = ""
authors = ["Ossi Ilmanen <ossi.ilmanen@gmail.com>"]
readme = "README.md"
packages = [{include = "rsa_encryption"}]

[tool.poetry.dependencies]
python = "^3.8"
rsa = "^4.9"
invoke = "^1.7.3"
kivy = "^2.1.0"
virtualenv = "^20.17.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
coverage = "^6.5.0"
pylint = "^2.15.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
